# process

./: .drone.star  .gitignore  .travis.yml  CMakeLists.txt  README.md  build.jam  filter_section_warning.py  index.html
.circleci/: config.yml
.github/workflows/: ci.yml
boost/detail/winapi/: GetSystemDirectory.hpp  environment.hpp  handle_info.hpp  named_pipe_api.hpp  namepd_pipe_api.hpp  process_api.hpp  process_info.hpp  shell_api.hpp  show_windows.hpp  startf.hpp  tchar.hpp
boost/process/: config.hpp
boost/process/posix/: executor.hpp
boost/process/windows/: child.hpp  create_pipe.hpp  executor.hpp  pipe.hpp  search_path.hpp  shell_path.hpp  terminate.hpp  wait_for_exit.hpp
boost/process/windows/initializers/: bind_stderr.hpp  bind_stdin.hpp  bind_stdout.hpp  close_stderr.hpp  close_stdin.hpp  close_stdout.hpp  hide_console.hpp  initializer_base.hpp  run_exe.hpp  set_cmd_line.hpp  set_env.hpp  set_on_error.hpp  show_window.hpp  start_in_dir.hpp  (+1 more)
doc/: Jamfile.jam  acknowledgements.qbk  classes.qbk  concepts.qbk  configuration.adoc  coroutines.qbk  design.qbk  env.adoc  example.qbk  extend.qbk  faq.qbk  handbook.qbk  index.adoc  introduction.qbk  launching.qbk  platform.qbk  posix_pseudocode.xml  process.qbk  properties.qbk  quickstart.adoc  start_dir.adoc  stdio.adoc  this_process.qbk  tutorial.qbk  version2.adoc  windows.qbk  windows_pseudocode.xml
doc/reference/: bind_launcher.adoc  environment.adoc  process_handle.adoc
doc/v1/: introduction.qbk  tutorial.qbk
doc/v2/: introduction.qbk  launcher.qbk  quickstart.qbk  stdio.qbk
example/: Jamfile.jam  args.cpp  async_io.cpp  cleanup.cpp  env.cpp  error_handling.cpp  execute.cpp  intro.cpp  io.cpp  posix.cpp  start_dir.cpp  stdio.cpp  streams.cpp  sync_io.cpp  terminate.cpp  wait.cpp  windows.cpp  work_dir.cpp
include/boost/: process.hpp
include/boost/process/: args.hpp  async.hpp  async_pipe.hpp  async_system.hpp  attached.hpp  child.hpp  cmd.hpp  config.hpp  create_pipe.hpp  env.hpp  environment.hpp  error.hpp  exception.hpp  exe.hpp  exe_args.hpp  execute.hpp  executor.hpp  extend.hpp  f_args.hpp  group.hpp  handles.hpp  initializers.hpp  io.hpp  io_variant.hpp  locale.hpp  options.hpp  pipe.hpp  posix.hpp  search_path.hpp  shell.hpp  shell_path.hpp  spawn.hpp  start_dir.hpp  system.hpp  terminate.hpp  v2.hpp  variant.hpp  wait_for_exit.hpp  windows.hpp
libs/process/test/: start_in_dir.cpp
meta/: libraries.json
src/: environment.cpp  error.cpp  group_handle.cpp  pid.cpp  shell.cpp
src/detail/: environment_posix.cpp  environment_win.cpp  utf8.cpp
src/ext/: cmd.cpp  cwd.cpp  env.cpp  exe.cpp  proc_info.cpp
src/posix/: close_handles.cpp
src/windows/: default_launcher.cpp
test/: CMakeLists.txt  Jamfile.jam  appveyor.yml  args_cmd.cpp  args_handling.cpp  asio_no_deprecated.cpp  async.cpp  async_fut.cpp  async_pipe.cpp  async_system.cpp  async_system_stackful.cpp  async_system_stackful_error.cpp  async_system_stackful_except.cpp  async_system_stackless.cpp  attachment.cpp  bind_stderr.cpp  bind_stdin.cpp  bind_stdin_stdout.cpp  bind_stdout.cpp  bind_stdout_stderr.cpp  close_stderr.cpp  close_stdin.cpp  close_stdout.cpp  cmd_test.cpp  coroutine_test.cpp  env.cpp  environment.cpp  error.cpp  exit_argc.cpp  exit_code.cpp  extensions.cpp  group.cpp  group_wait.cpp  inherit_env.cpp  limit_fd.cpp  on_exit.cpp  on_exit2.cpp  on_exit3.cpp  pipe.cpp  pipe_fwd.cpp  (+22 more)
test/coverage/: adapt_deref_traits.hpp.html  addressof.hpp.html  advance.hpp.html  advance_impl.hpp.html  algorithm.hpp.html  all_of.hpp.html  any.hpp.html  arg.hpp.html  args.hpp.html  argument.hpp.html  argument_factory.hpp.html  argv_traverser.hpp.html  as_literal.hpp.html  assertion_result.hpp.html  assign_op.hpp.html  async.hpp.html  async_handler.hpp.html  async_in.hpp.html  async_out.hpp.html  async_pipe.hpp.html  async_result.hpp.html  at.hpp.html  at_impl.hpp.html  at_key.hpp.html  bad_lexical_cast.hpp.html  base_from_completion_cond.hpp.html  basic_cmd.hpp.html  basic_cstring.hpp.html  basic_deadline_timer.hpp.html  basic_handle.hpp.html  basic_io_object.hpp.html  basic_iterator.hpp.html  basic_object_handle.hpp.html  basic_pipe.hpp.html  basic_stream_handle.hpp.html  basic_streambuf.hpp.html  bcs_char_traits.hpp.html  begin.hpp.html  begin_impl.hpp.html  bind.hpp.html  (+319 more)
test/v1/: Jamfile.jam  args_handling.cpp  async_system_stackful.cpp  async_system_stackful_error.cpp  async_system_stackful_except.cpp  async_system_stackless.cpp  bind_stderr.cpp  bind_stdin.cpp  bind_stdout.cpp  cmd_test.cpp  env.cpp  exit_code.cpp  extensions.cpp  group.cpp  limit_fd.cpp  posix_specific.cpp  run_exe_path.cpp  search_path.cpp  shell_path.cpp  sparring_partner.cpp  spawn.cpp  spawn_fail.cpp  start_dir.cpp  system_test1.cpp  system_test2.cpp
test/v2/: CMakeLists.txt  Jamfile.jam  b2  cmd.cpp  codecvt.cpp  cstring_ref.cpp  cwd.cpp  environment.cpp  exe.cpp  ext.cpp  group.cpp  pid.cpp  process.cpp  project-config.jam  shell.cpp  target.cpp  test_impl.cpp  utf8.cpp
test/v2/experimental/: pty.cpp  pty_target.cpp
(+368 files in other folders)
