enable_testing()


add_executable(sparring_partner sparring_partner.cpp )
target_link_libraries(sparring_partner Boost::program_options Boost::filesystem Boost::iostreams)

add_executable(exit_argc exit_argc.cpp)

add_executable(sub_launch sub_launcher.cpp)
target_link_libraries(sparring_partner Boost::program_options Boost::filesystem Boost::iostreams Boost::system)

function(process_standalone_test name )
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} Boost::system Boost::filesystem)
    add_test(NAME ${name} COMMAND $<TARGET_FILE:${name}> )
endfunction()

process_standalone_test(environment)
process_standalone_test(async_pipe)
process_standalone_test(pipe)

function(process_sub_launch_test name )
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} Boost::system Boost::filesystem Boost::thread)
    add_test(NAME ${name} COMMAND $<TARGET_FILE:${name}> $<TARGET_FILE:sub_launch> )
endfunction()

process_sub_launch_test(group)
process_sub_launch_test(group_wait)

function(process_sparring_partner_launch name )
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} Boost::system Boost::filesystem Boost::thread)
    add_test(NAME ${name} COMMAND $<TARGET_FILE:${name}> $<TARGET_FILE:sparring_partner> )
endfunction()

process_sparring_partner_launch(async)
process_sparring_partner_launch(async_fut)
process_sparring_partner_launch(args_handling)
process_sparring_partner_launch(args_cmd)
process_sparring_partner_launch(wargs_cmd)
process_sparring_partner_launch(bind_stderr)
process_sparring_partner_launch(bind_stdin)
process_sparring_partner_launch(bind_stdin_stdout)
process_sparring_partner_launch(bind_stdout)
process_sparring_partner_launch(bind_stdout_stderr)
process_sparring_partner_launch(pipe_fwd)
process_sparring_partner_launch(cmd_test)
process_sparring_partner_launch(close_stderr)
process_sparring_partner_launch(close_stdin)
process_sparring_partner_launch(close_stdout)
process_sparring_partner_launch(error)
process_sparring_partner_launch(exit_code)
process_sparring_partner_launch(extensions)
process_sparring_partner_launch(env)
process_sparring_partner_launch(limit_fd)
process_sparring_partner_launch(run_exe)
process_sparring_partner_launch(run_exe_path)
process_sparring_partner_launch(search_path)
process_sparring_partner_launch(shell)
process_sparring_partner_launch(shell_path)
process_sparring_partner_launch(system_test1)
process_sparring_partner_launch(system_test2)
process_sparring_partner_launch(spawn)
process_sparring_partner_launch(start_dir)
process_sparring_partner_launch(terminate)
process_sparring_partner_launch(throw_on_error)
process_sparring_partner_launch(wait)
process_sparring_partner_launch(wait_for)
process_sparring_partner_launch(on_exit)
process_sparring_partner_launch(on_exit2)
process_sparring_partner_launch(on_exit3)
process_sparring_partner_launch(posix_specific)
process_sparring_partner_launch(windows_specific)